Add sidebar_image_credit parameter

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,5 +1,6 @@
 <div class="sidebar-image">
     <img src="{{ default "/image.jpeg" .Site.Params.sidebar_image }}" />
+    <div class="sidebar-image-credit">{{ .Site.Params.sidebar_image_credit }}</div>
 </div>
 
 <div class="has-text-centered sidebar-text">
