--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
 
 <section class="section">
+    <h1>{{ .Title }}</h1>
     <div class="columns">
         <div class="column">
             {{ partial "tags.html" . }}
