--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -20,6 +20,7 @@
                 {{ $text }}
             </a>
             {{ end }}
+            <a class="navbar-item dark-mode-toggle" href="#">🌚</a>
         </div>
 
     </div>
