--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,22 +1,26 @@
 {{ define "main" }}
+    <section class="section">
+        <div class="content">
+            <h1>{{ .Title }}</h1>
 
-    {{ if (and (eq .Data.Plural "tags") (eq .Kind "taxonomy")) }}
-        {{/* Taxonomy list */}}
+            {{ if (and (eq .Data.Plural "tags") (eq .Kind "taxonomy")) }}
+                {{/* Taxonomy list */}}
 
-        {{ range .Pages.ByPublishDate.Reverse }}
-            <a href="{{ .RelPermalink }}" class="button is-info is-light">
-                {{ .Title }}
-            </a>
-        {{ end }}
+                {{ range .Pages.ByPublishDate.Reverse }}
+                    <a href="{{ .RelPermalink }}" class="button is-info is-light">
+                        {{ .Title }}
+                    </a>
+                {{ end }}
 
-    {{ else }}
+            {{ else }}
 
-        {{/* Posts list */}}
+                {{/* Posts list */}}
 
-        {{ range .Pages.ByPublishDate.Reverse }}
-            {{ partial "post.html" . }}
-        {{ end }}
+                {{ range .Pages.ByPublishDate.Reverse }}
+                    {{ partial "post.html" . }}
+                {{ end }}
 
-    {{ end }}
-
+            {{ end }}
+        </div>
+    </section>
 {{ end }}
